# matmod

./: .gitignore  README.md  design.md  flake.nix  models.md  roadmap.md  treefmt.nix
R/: mverse_indexed.Rmd
crates/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/data_prep/: Cargo.toml
crates/ffi/: Cargo.toml  build.rs
crates/ffi/cpp/include/: gaussian.hpp  kernel.hpp
crates/ffi/cpp/src/: gaussian.cpp
crates/ffi/src/: ddm.rs  gaussian.rs  lib.rs  stan.rs
crates/kernels/: Cargo.toml
crates/kernels/src/: buffer.rs  density.rs  extension.rs  kernel.rs  lib.rs  metric.rs  numeric.rs  proposal.rs  state.rs  state_space.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/benches/: rwmh.rs
crates/runtime/scripts/: bench_features.sh
crates/runtime/src/: adapt.rs  chain.rs  diagnostics.rs  integrator.rs  lib.rs  policy.rs
crates/runtime/src/ddm/: approx.rs  batch.rs  cse.rs  ddm.rs  ffi.rs  latent.rs  mod.rs  model.rs
crates/runtime/src/mcmc/: hmc.rs  mod.rs  nuts.rs  proposal.rs  rwmh.rs
crates/runtime/src/models/: ddm.rs  proposal.rs  rwmh.rs
crates/runtime/src/smc/: mod.rs  traits.rs
nix/: enzyme.nix  rust-toolchain.nix
