[package]
name = "kernels"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
faer = { version = "0.24", optional = true }
cblas = { version = "0.4", optional = true }
thiserror = "2.0.18"
anyhow = "1.0.102"

[features]
default = []
simd = []
openblas = ["dep:cblas"]
faer = ["dep:faer"]
std-autodiff = []
parallel = []
