[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
kernels = { path = "../kernels" }
rand = "0.10.1"
ffi = { path = "../ffi" }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
pkg-config = "0.3"

[features]
default = []

simd = ["kernels/simd"]
openblas = ["kernels/openblas"]
faer = ["kernels/faer"]
bench = []

[[bench]]
name = "rwmh"
harness = false
